infra/kubernetes/bid-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bid-service
  namespace: auction
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bid-service
  template:
    metadata:
      labels:
        app: bid-service
    spec:
      containers:
        - name: bid-service
          image: ghcr.io/akashnixon/auction-bid-service:deployment
          ports:
            - containerPort: 3004
              name: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 40
            periodSeconds: 20
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 200m
              memory: 384Mi
            limits:
              cpu: 1
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: bid-service
  namespace: auction
spec:
  selector:
    app: bid-service
  ports:
    - name: http
      port: 3004
      targetPort: http
