infra/kubernetes/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: auction
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: ghcr.io/akashnixon/auction-notification-service:deployment
          ports:
            - containerPort: 3005
              name: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 150m
              memory: 256Mi
            limits:
              cpu: 750m
              memory: 768Mi
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: auction
spec:
  selector:
    app: notification-service
  ports:
    - name: http
      port: 3005
      targetPort: http
